alignment fixed

--- a/style.scss
+++ b/style.scss
@@ -1142,6 +1142,7 @@ main {
                     text-align: right;
 
                     h1 {
+                        margin-left: 19rem;
                         font-size: 2.5rem;
                     }
 
